--- a/src/Vistas/formularioDeInscripcion.form
+++ b/src/Vistas/formularioDeInscripcion.form
@@ -3,6 +3,9 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="formularioDeInscripcion_buttonGroup1"/>
+      </AuxValues>
     </Component>
   </NonVisualComponents>
   <SyntheticProperties>
